Hopefully final push for hw3

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <!-- Page header, description, and example cheesecake image -->
-<h1>Cheesy Cheescakes</h1>
+<h1>Cheesy Cheesecakes</h1>
 <p>Follow the prompts to build your dream cheesecake.</p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Mondays_at_Il_Forno_-_Cheesecake_with_strawberry_sauce.jpg" 
 	alt="Example Cheesecake" 
@@ -52,7 +52,6 @@
   <br>
   <!-- Submit button-->
   <input type="submit" id="submit" value="Order">
-  
 </form>
 
 <!-- Consulted this link for help for setting button text: 
@@ -81,13 +80,14 @@
 	  </div>
    </div>
 </h3>
+<!-- Example past orders-->
 <ul>
 	<li>11 Cherry</li>
 	<li>17 Chocolate</li>
 	<li>31 Plain</li>
 </ul>
 
-
+<!-- Invoke helper function for displaying order respons, or error message -->
 <script src="javascripts/orderResponse.js"></script>
 
 
